<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@drawable/background"
	android:orientation="vertical" >
	
    <LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">
       
       <TextView
			android:contentDescription="@string/content_description_add_ring"
			android:id="@+id/newRing"
			android:background="@drawable/rings_add_ring"
			android:text="@string/button_add_ring"
			android:gravity="center"
			android:paddingTop="20dp"
			android:textSize="13sp"
			android:textColor="@drawable/text_button"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:scaleType="centerCrop"
			android:adjustViewBounds="true"
			android:layout_weight="1"/>

       <TextView
           android:id="@+id/ok"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:layout_weight="1"
           android:adjustViewBounds="true"
           android:background="@drawable/contact_ok"
           android:contentDescription="@string/content_description_validate"
           android:gravity="center"
           android:paddingTop="20dp"
           android:scaleType="centerCrop"
           android:text="@string/button_ok_ring"
           android:textColor="@drawable/text_button" />
                      
    </LinearLayout>
    

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:gravity="center_vertical">
			   	    
	    <TextView
			android:id="@+id/selectTxt"
			style="@style/descriptionText"
			android:layout_height="match_parent"
			android:layout_width="match_parent"
			android:layout_margin="20dp"
			android:layout_weight="1"
			android:layout_gravity="center_vertical"
			android:gravity="right"
			android:visibility="gone"
			android:text="@string/select_rings_notify"/>
		
	</LinearLayout>

	
	
	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<ListView
			android:id="@+id/ringsList"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:divider="@android:color/darker_gray"

			android:fastScrollAlwaysVisible="true"
			android:fastScrollEnabled="true"
			android:cacheColorHint="#FFDAFF7F"
			android:dividerHeight="1dp" />

		<!-- TextView
			android:id="@+id/noSipContact"
			android:visibility="gone"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:layout_centerVertical="true"
			android:text="@string/no_sip_contact"
			android:textColor="@drawable/text_color"
			android:textAppearance="@android:style/TextAppearance.Large"/-->

		<TextView
			android:id="@+id/noRings"
			android:visibility="gone"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:layout_centerVertical="true"
			android:text="@string/no_rings"
			android:textColor="@drawable/text_color"
			android:textAppearance="@android:style/TextAppearance.Large"/>

	</RelativeLayout>

</LinearLayout>