<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:linphone="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
  	android:background="@drawable/background"
  	android:orientation="vertical">
    
    <LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">
        
        <TextView 
            android:contentDescription="@string/content_description_cancel"
            android:id="@+id/cancel"
            android:background="@drawable/contact_cancel"
            android:text="@string/button_cancel"
            android:gravity="center"
            android:paddingTop="20dp"
            android:textColor="@drawable/text_button"
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:scaleType="centerCrop"
		    android:adjustViewBounds="true"
		    android:layout_weight="1"/>
        
        <TextView 
            android:contentDescription="@string/content_description_validate"
            android:id="@+id/ok"
            android:background="@drawable/contact_ok"
            android:text="@string/button_ok"
            android:gravity="center"
            android:enabled="false"
            android:paddingTop="20dp"
            android:textColor="@drawable/text_button"
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:scaleType="centerCrop"
		    android:adjustViewBounds="true"
		    android:layout_weight="1"/>
        
    </LinearLayout>
    
    <!-- <ScrollView
        android:id="@+id/controlsScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"> -->
    
        <LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical" >
    
		    <LinearLayout 
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:paddingTop="20dp"
		        android:paddingLeft="10dp"
		        android:paddingRight="10dp"
			    android:gravity="center_vertical"
			    android:orientation="horizontal">
		        
		        <org.linphone.ui.AvatarWithShadow
				    android:id="@+id/ringPicture"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    linphone:picture="@drawable/unknown_small" />
			        
		        <LinearLayout
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:orientation="vertical">
			        
			        <EditText
            			android:textCursorDrawable="@null"
				        android:id="@+id/ringName"
				        android:layout_width="match_parent"
				        android:layout_height="wrap_content"
				        android:hint="@string/ring_name"
				        android:textColor="@color/text_contrast"
				        android:background="@drawable/chat_fast_address_background"
				        android:gravity="left"
				        android:paddingRight="5dp"
				        android:inputType="textPersonName|textCapWords"/>
			        
			        <CheckBox
			          	android:textCursorDrawable="@null"
				        android:id="@+id/ringDefault"
				        android:layout_width="match_parent"
				        android:layout_height="wrap_content"
				        android:hint="@string/ring_always"
				        android:textColor="@color/text_contrast"				        
				        android:gravity="left"
				        android:paddingRight="5dp"/>
			        
			        <!-- EditText
            			android:textCursorDrawable="@null"
				        android:id="@+id/contactFirstName"
				        android:layout_width="match_parent"
				        android:layout_height="wrap_content"
				        android:hint="@string/contact_first_name"
				        android:textColor="@color/text_contrast"
				        android:background="@drawable/chat_fast_address_background"
				        android:gravity="left"
				        android:paddingRight="5dp"
				        android:inputType="textPersonName|textCapWords"/>
		           --> 
		           
		        </LinearLayout>
		        			        	        		       
		    </LinearLayout>
		   
		    <LinearLayout
		        android:layout_width="match_parent"
	    		android:layout_height="wrap_content"
	    		android:orientation="vertical">
			    
			    <TextView
					android:contentDescription="@string/content_description_add_contact"
					android:id="@+id/newContact"
					android:background="@drawable/contacts_add_contact"
					android:text="@string/button_add_contacts_ring"
					android:gravity="center"
					android:paddingTop="20dp"
					android:textSize="13sp"
					android:textColor="@drawable/text_button"
					android:layout_width="match_parent"
					android:scaleType="centerCrop"
					android:adjustViewBounds="true"
					android:layout_weight="1"
					android:layout_height="0dp"/>
		</LinearLayout>
		    <RelativeLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content">

				<ImageView
					android:contentDescription="@string/content_description_cancel"
					android:id="@+id/clearSearchField"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:adjustViewBounds="true"
					android:src="@drawable/list_delete"
					android:layout_centerVertical="true"
					android:layout_alignParentRight="true"
					android:paddingLeft="5dp"
					android:paddingRight="5dp"/>
		
				<EditText
					android:textCursorDrawable="@null"
					android:id="@+id/searchField"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:textColor="@android:color/black"
					android:background="@drawable/chat_fast_address_background"
					android:gravity="center"
					android:layout_toLeftOf="@id/clearSearchField"
					android:paddingRight="5dp"
					android:inputType="textPersonName"/>
		
			</RelativeLayout>
		    
		   <RelativeLayout
				android:layout_width="match_parent"
				android:layout_height="fill_parent">

				<ListView
				    android:id="@+id/ringContactsList"
				    android:layout_width="match_parent"
				    android:layout_height="match_parent"
				    android:cacheColorHint="@color/transparent"
				    android:divider="@android:color/darker_gray"
				    android:dividerHeight="1dp"
				    android:fastScrollAlwaysVisible="true"
				    android:fastScrollEnabled="true" />
				
				<TextView
					android:id="@+id/noContact"
					android:visibility="gone"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:gravity="center"
					android:layout_centerVertical="true"
					android:text="@string/no_contact"
					android:textColor="@drawable/text_color"
					android:textAppearance="@android:style/TextAppearance.Large"/>
		
			</RelativeLayout>
		        
		    <TableLayout
		        android:id="@+id/controls"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:paddingTop="20dp"/>

		</LinearLayout>
    
    <!-- </ScrollView>-->

</LinearLayout>