<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background_app"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:orientation="vertical" >

    <Button
	        android:id="@+id/iniciaTrackId"
	        style="@style/button_link"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="right"
	        android:layout_marginRight="25dp" 
	        android:padding="5dp"       
	        android:visibility="gone"
	        android:text="@string/program_tracking"/>
    	
	   <LinearLayout
	       android:id="@+id/layoutCurrentTrack"
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content"
	       android:layout_gravity="center"	
	       android:orientation="horizontal"
	       android:visibility="visible" >
     	   
	        <ImageView
	            android:contentDescription="@string/content_description_contact_picture"
		        android:id="@+id/iconTrack"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center_horizontal"
		        android:adjustViewBounds="true"	        
		        android:scaleType="centerInside"
		        android:src="@drawable/tracking" />
       
	        <!-- LinearLayout
	            android:id="@+id/trakingDate"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center"
	            android:layout_marginBottom="5dp" -->
	
	            <TextView
	                android:id="@+id/txtUltimaAlerta"
	                style="@style/TextoInstruccion"
	                android:layout_marginLeft="5dp"
	                android:layout_marginRight="5dp"
	                android:layout_gravity="center_vertical"
	                android:text="15 - Abril - 08:30"
	                android:textColor="@color/background_header"
	                android:textAppearance="?android:attr/textAppearanceMedium" />	    
    		<!-- /LinearLayout-->    
		</LinearLayout>
		 
	   	<LinearLayout
		   android:layout_width="wrap_content" 
	       android:layout_height="wrap_content"
	       android:orientation="horizontal"
	       android:layout_gravity="center"
	       android:id="@+id/layoutTrackOptions"
	       android:visibility="visible">
		        
	        <Button
	            android:id="@+id/btnCancelCurrentTrack"
	            style="@style/inner_back_app_button"
	            android:layout_width="90dp"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center"
		        android:layout_marginTop="5dp" 
		        android:visibility="visible"	           
	            android:text="@string/cancel"/>
	
	        <Button
	            android:id="@+id/btnModifyCurrentTrack"
	            style="@style/inner_back_app_button"
	            android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center"
		        android:layout_marginTop="5dp" 
		        android:visibility="visible"		            
	            android:text="@string/edit"/>
	
	        <Button
	            android:id="@+id/btnShareCurrentTrack"	            
	            style="@style/inner_app_button"       
	            android:layout_width="90dp"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center"
		        android:layout_marginTop="5dp" 
		        
		        android:visibility="visible"	     	            
	            android:text="@string/share"/>
	        	
  		</LinearLayout>
</LinearLayout>    
