<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/panicScreenRoot"
    android:layout_width="match_parent"
<<<<<<< HEAD
    android:orientation="vertical" 
    android:layout_height="wrap_content"
=======
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
>>>>>>> second_stage
    android:background="@color/background_app">

    <ScrollView
        android:layout_width="match_parent"
<<<<<<< HEAD
        android:layout_height="wrap_content"
        android:background="@color/background_header"
        android:orientation="vertical" >
        <!-- @drawable/bg_top" -->

        <TextView
            android:id="@+id/textView2"
            style="@style/TextoCabecera"
            android:layout_marginTop="7dp"
            android:text="@string/ultima"
            android:textColor="#FF7B1E"
            android:textAppearance="?android:attr/textAppearanceMedium" />
=======
        android:layout_height="0dip"
        android:layout_weight="1"
        android:fillViewport="true">
>>>>>>> second_stage

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:layout_marginRight="10dp">

            <LinearLayout
                android:id="@+id/statusTrack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:visibility="gone" >

                <TextView
                    android:id="@+id/txtTrackStatus"
                    style="@style/TextoInstruccion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="Rastreando..."
                    android:textColor="@color/background_header"/>

                <ProgressBar
                    android:id="@+id/trakingBar"
                    style="@style/ProgressBar.Horizontal.Indeterminate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:indeterminate="true"
                    android:max="70"/>
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

<<<<<<< HEAD
        <Button
            android:id="@+id/btnPanico"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@drawable/panicbutton"
            android:text="@string/Alerta"
            android:textColor="#FFFFFF"
            android:textSize="40sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <!-- LinearLayout
        style="@style/panelAcciones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F5F5F5"
        android:orientation="vertical" >

        <fragment android:id="@+id/fragmentRastreo" 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            class="org.hansel.myAlert/Rastreo"
             tools:layout="@layout/fragment_rastreo"
            />
    </LinearLayout-->
=======
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingTop="5dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/alert" />

            <Button
                android:id="@+id/btnAlert"
                style="@style/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="-17dp"
                android:layout_marginBottom="10dp"
                android:visibility="visible"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/sendAlert"/>

            <!-- TextView
                android:id="@+id/actionDescription"
                style="@style/TextoInstruccion"
                android:layout_gravity="fill_horizontal"
                android:text="@string/panic_tracking_description"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/background_header"
                android:visibility="visible"/-->

            <Button
                android:id="@+id/iniciaTrackId"
                style="@style/button_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="25dp"
                android:padding="5dp"
                android:visibility="visible"
                android:drawableLeft="@drawable/clock"
                android:text="@string/program_tracking"/>
>>>>>>> second_stage

            <include layout="@layout/fragment_rastreo" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>